--- a/src/index.html
+++ b/src/index.html
@@ -27,19 +27,9 @@
     <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
 
-    <!-- it's stupid to have to load it here, but this is for the +1 button -->
-    <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-      { "parsetags": "explicit" }
-    </script>
   </head>
   <body>
-      <div class="header">
-          <div class="container">
-              <div class="site-logo">
-                  Jarred Mack - Front End Developer
-              </div>
-          </div>
-      </div>
+      <div ng-include="'partials/_header.tpl.html'"></div>
 
       <div class="content">
           <div class="container" ui-view="main"></div>
