Responsive header/footer, and initial hamburger with no animations

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,6 @@
           <div class="container" ui-view="main"></div>
       </div>
 
-      <div class="footer">
-          <div class="container">
-              This is the footer
-          </div>
-      </div>
+      <div ng-include="'partials/_footer.tpl.html'"></div>
   </body>
 </html>
