Adding favicon link and fixing the grunt task

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
