Implementing typekit font

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
+    <!-- TypeKit -->
+    <script src="//use.typekit.net/cnt7bnk.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
+
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
