--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <head>
     <title ng-bind="pageTitle"></title>
 
+    <!-- Routing fix - http://stackoverflow.com/a/26584076 -->
+    <base href="/" />
+
     <!-- social media tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@joshdmiller">
