--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
       <div ng-include="'partials/_header.tpl.html'"></div>
 
       <div class="content">
-          <div class="container" ui-view="main"></div>
+          <div class="container">
+              <div class="main ng-fade ng-fade-centered" ui-view="main"></div>
+          </div>
       </div>
 
       <div ng-include="'partials/_footer.tpl.html'"></div>
