--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,10 @@
         <div ng-include="'partials/_header.tpl.html'"></div>
 
         <div class="content">
-          <div class="container">
+            <div class="container">
               <div class="main ng-fade ng-fade-centered" ui-view="main"></div>
-          </div>
+            </div>
+            <div class="bg bottom"></div>
         </div>
 
         <div ng-include="'partials/_footer.tpl.html'"></div>
