Updating social media tags

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,11 @@
         <base href="/" />
 
         <!-- social media tags -->
-        <meta name="twitter:card" content="summary">
-        <meta name="twitter:site" content="@joshdmiller">
-        <meta name="twitter:title" content="ngBoilerplate">
-        <meta name="twitter:description" content="Non-Trivial AngularJS Made Easy: Everything you need to kickstart AngularJS projects: a best-practice directory structure, an intelligent build system, and the best web design libraries around.">
-        <meta name="twitter:creator" content="@joshdmiller">
-        <meta name="twitter:image:src" content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846">
-        <meta property="og:title" content="ngBoilerplate" />
+        <meta property="og:title" content="Jarred Mack - Front End Developer" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://bit.ly/ngBoilerplate" />
-        <meta property="og:image" content="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/Octocat.png?1366128846" />
-        <meta property="og:description" content="Non-Trivial AngularJS Made Easy: Everything you need to kickstart AngularJS projects: a best-practice directory structure, an intelligent build system, and the best web design libraries around.">
+        <meta property="og:url" content="http://www.jarredmack.com/" />
+        <meta property="og:image" content="http://api.jarredmack.com/images/photos/profile.jpg" />
+        <meta property="og:description" content="Portfolio site for Jarred Mack. Contact me if you've got an exciting project in mind, and need an experienced developer to execute it!">
 
         <meta name="viewport" content="width=device-width; initial-scale=1">
 
