Description meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
         <meta name="viewport" content="width=device-width; initial-scale=1">
 
+        <meta name="description" content="Portfolio site for Jarred Mack - Front End Developer. Take a look at my portfolio, and contact me if you've got a job in mind!" />
+        
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
         <!-- TypeKit -->
