Updating meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://www.jarredmack.com/" />
         <meta property="og:image" content="http://api.jarredmack.com/images/photos/profile.jpg" />
-        <meta property="og:description" content="Portfolio site for Jarred Mack. Contact me if you've got an exciting project in mind, and need an experienced developer to execute it!">
+        <meta property="og:description" content="Portfolio site for Jarred Mack - Front End Developer from Sydney. Experienced in AngularJS, LESS, and responsive design.">
 
         <meta name="viewport" content="width=device-width; initial-scale=1">
 
-        <meta name="description" content="Portfolio site for Jarred Mack - Front End Developer. Take a look at my portfolio, and contact me if you've got a job in mind!" />
+        <meta name="description" content="Portfolio site for Jarred Mack - Front End Developer from Sydney. Experienced in AngularJS, LESS, and responsive design. Contact me if you've got an interesting project in mind!" />
 
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
