Fixing viewport meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <meta property="og:image" content="http://api.jarredmack.com/images/photos/profile.jpg" />
         <meta property="og:description" content="Portfolio site for Jarred Mack - Front End Developer from Sydney. Experienced in AngularJS, LESS, and responsive design.">
 
-        <meta name="viewport" content="width=device-width; initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
         <meta name="description" content="Portfolio site for Jarred Mack - Front End Developer from Sydney. Experienced in AngularJS, LESS, and responsive design. Contact me if you've got an interesting project in mind!" />
 
